[gd_scene load_steps=6 format=3 uid="uid://cf7ig5canevbi"]

[ext_resource type="Script" path="res://scripts/main_menu.gd" id="1_omo11"]
[ext_resource type="Texture2D" uid="uid://bglijfaxk5h1i" path="res://art/shop/Canteen.png" id="2_ygj5t"]
[ext_resource type="Texture2D" uid="uid://bdyy163b4rddm" path="res://art/shop/canteen sign board.png" id="3_n6ija"]

[sub_resource type="Gradient" id="Gradient_n1ua7"]
offsets = PackedFloat32Array(0, 0.540816, 1)
colors = PackedColorArray(0.0431373, 0.0470588, 0.156863, 1, 0.117647, 0.164706, 0.470588, 1, 0.227451, 0.376471, 0.45098, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ef4xg"]
gradient = SubResource("Gradient_n1ua7")
fill_from = Vector2(1, 0.0042735)
fill_to = Vector2(0, 0)

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_omo11")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(204, 356)
scale = Vector2(37.7422, 18.75)
texture = SubResource("GradientTexture2D_ef4xg")

[node name="Canteen" type="Sprite2D" parent="."]
position = Vector2(267, 377.25)
scale = Vector2(15.875, 17.9219)
texture = ExtResource("2_ygj5t")

[node name="CanteenSignBoard" type="Sprite2D" parent="."]
position = Vector2(286, 199)
scale = Vector2(4.99219, 5.125)
texture = ExtResource("3_n6ija")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -107.5
offset_top = -82.0
offset_right = 107.5
offset_bottom = 82.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="StartGameBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Start Game"

[node name="OptionsBtn" type="Button" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
text = "Options"

[connection signal="pressed" from="VBoxContainer/StartGameBtn" to="." method="_on_start_game_btn_pressed"]
[connection signal="pressed" from="VBoxContainer/OptionsBtn" to="." method="_on_options_btn_pressed"]
